@@ -43,7 +43,7 @@ test regexpComp-1.2 {basic regexp operation} {
     }
 } 1
 test regexpComp-1.3 {basic regexp operation} {
-    evalInProc {    
+    evalInProc {
 	regexp ab*c ab
     }
 } 0
@@ -68,6 +68,43 @@ test regexpComp-1.7 {regexp utf compliance} {
 	list [string compare $foo $bar] [regexp 4 $bar]
     }
 } {0 0}
+
+test regexp-1.8 {regexp ***= metasyntax} {
+    evalInProc {
+	regexp -- "***=o" "aeiou"
+    }
+} 1
+test regexp-1.9 {regexp ***= metasyntax} {
+    evalInProc {
+	set string "aeiou"
+	regexp -- "***=o" $string
+    }
+} 1
+test regexp-1.10 {regexp ***= metasyntax} {
+    evalInProc {
+	set string "aeiou"
+	set re "***=o"
+	regexp -- $re $string
+    }
+} 1
+test regexp-1.11 {regexp ***= metasyntax} {
+    evalInProc {
+	regexp -- "***=y" "aeiou"
+    }
+} 0
+test regexp-1.12 {regexp ***= metasyntax} {
+    evalInProc {
+	set string "aeiou"
+	regexp -- "***=y" $string
+    }
+} 0
+test regexp-1.13 {regexp ***= metasyntax} {
+    evalInProc {
+	set string "aeiou"
+	set re "***=y"
+	regexp -- $re $string
+    }
+} 0
 
 test regexpComp-2.1 {getting substrings back from regexp} {
     evalInProc {
